# microgemm

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.github/workflows/: actionlint.yml  build_and_test.yml  check.yml  clippy.yml  msrv.yml  nostd.yml  safety.yml  scheduled.yml  semver.yml  test.yml  wasm.yml
benches/: README.md  cache.py  gemm.rs  gemm_f32.rs  generic_kernel.rs
check_no_std/: Cargo.toml  README.md
check_no_std/src/: main.rs
examples/: README.md  gemm_f16.rs  no_alloc.rs
examples/gemm_f16/: Cargo.toml  README.md
examples/gemm_f16/src/: main.rs
examples/wasm_simd128/: Cargo.toml  README.md
examples/wasm_simd128/.cargo/: config
examples/wasm_simd128/src/: main.rs
src/: copying.rs  gemm.rs  kernel.rs  lib.rs  packing.rs  select.rs
src/gemm/: loops.rs  mod.rs  packing.rs
src/gemm/kernels/: mod.rs  naive.rs
src/kernels/: aarch64.rs  generic.rs  mod.rs  neon.rs  wasm.rs
src/kernels/generic/: generic_2x2.rs  generic_4x4.rs  generic_8x8.rs  mod.rs  square_kernel.rs
src/kernels/neon/: microkernel.rs  mod.rs  simd_mock.rs
src/kernels/neon/ker4x4/: f32_4x4.rs  mod.rs
src/kernels/neon/ker8x8/: f32_8x8.rs  mod.rs
src/kernels/wasm/: microkernel.rs  mod.rs
src/mat/: base.rs  layout.rs  mod.rs
src/packing/: block.rs  colmajor.rs  mod.rs  pack.rs  pack_a.rs  pack_b.rs  registers.rs  rowmajor.rs  sizes.rs
src/utils/: arbitrary.rs  mod.rs  naive.rs  proptest_kernel.rs  random.rs  testing.rs
tests/: benchmarks.rs  comparison.rs  constant.rs  custom_kernel.rs  gemm.rs  gemm_samples.rs  mod.rs  neon.rs  no_alloc.rs  readme.rs  readme_custom.rs  readme_custom_kernel.rs  readme_generic.rs  readme_kernel_usage.rs  select_kernel.rs  usage.rs  wasm_browser.rs  wasm_node.rs  wasm_simd128.rs
