[package]
name = "microgemm"
version = "0.2.0-pre"
edition = "2021"
authors = ["cospectrum"]
rust-version = "1.65.0"

description = "General matrix multiplication with custom configuration in Rust. Supports no_std and no_alloc environments."
license = "MIT OR Apache-2.0"

repository = "https://github.com/cospectrum/microgemm"
readme = "README.md"
categories = ["science", "mathematics", "wasm", "no-std", "no-std::no-alloc"]
keywords = ["gemm", "matrix", "linear-algebra", "math"]

[dependencies]
generic-array = { version = "1.0.0", default-features = false }
num-traits = { version = "0.2.17", default-features = false }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5.1", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
rand = "0.8.5"
wasm-bindgen-test = "0.3.37"

[[bench]]
name = "gemm_f32"
harness = false
