[package]
name = "microgemm"
version = "0.2.1"
edition = "2021"
authors = ["cospectrum"]
rust-version = "1.65.0"

description = """
General matrix multiplication with custom configuration in Rust.
Supports no_std and no_alloc environments.
"""
license = "MIT OR Apache-2.0"

repository = "https://github.com/cospectrum/microgemm"
readme = "README.md"
categories = ["science", "mathematics", "wasm", "no-std", "no-std::no-alloc"]
keywords = ["gemm", "matrix", "linear-algebra", "math"]

[dependencies]
generic-array = { version = "1.0.0", default-features = false }
num-traits = { version = "0.2.17", default-features = false }

[dev-dependencies]
approx = "0.5.1"
criterion = { version = "0.5.1", default-features = false }
faer-core = { version = "0.16.0", default-features = false }
matrixmultiply = { version = "0.3.8", default-features = false }
rand = "0.8.5"

[[bench]]
name = "gemm_f32"
harness = false
